--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "affinity-engine-sound-manager-createjs",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "An Affinity Engine sound manager using createjs",
   "keywords": [
     "ember-addon",
@@ -25,7 +25,7 @@
     "ember-createjs": "^0.0.1"
   },
   "devDependencies": {
-    "affinity-engine": "git+https://github.com/affinity-engine/affinity-engine.git",
+    "affinity-engine": "^0.1.0",
     "babel-eslint": "^6.0.4",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
@@ -53,7 +53,7 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
-    "demoURL": "http://www.affinityengine.org/plugins/sound-manager-createjs",
+    "demoURL": "http://www.affinityengine.org/#/plugins/sound-manager-createjs",
     "after": [
       "affinity-engine"
     ]
